--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,13 +2,18 @@
 GameName=Give_Me_The_Gun
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/XYZ_the_Journey_Begins/Maps/Journey_Begins_Map.Journey_Begins_Map
-GameDefaultMap=/Game/XYZ_the_Journey_Begins/Maps/Journey_Begins_Map.Journey_Begins_Map
-TransitionMap=
+EditorStartupMap=/Game/XYZ_the_Journey_Begins/Maps/MainMenu.MainMenu
+LocalMapOptions=
+TransitionMap=None
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/XYZ_the_Journey_Begins/BluePrints/Framework/BP_BasicGameMode.BP_BasicGameMode_C
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/XYZ_the_Journey_Begins/Maps/MainMenu.MainMenu
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=/Game/XYZ_the_Journey_Begins/Core/Framework/BP_GameMode_MainMenu.BP_GameMode_MainMenu_C
 GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
